--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.1",
     "@react-native-community/datetimepicker": "^7.6.2",
-    "@react-native-community/slider": "^4.5.0",
     "@react-native-firebase/app": "^18.9.0",
     "@react-native-firebase/auth": "^18.9.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
-    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.29",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
