--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
+    "react-native-browser": "^0.6.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-slider": "^0.11.0",
