--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native-animatable": "^1.4.0",
     "react-native-browser": "^0.6.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-slider": "^0.11.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
