--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     ext {
-        buildToolsVersion = "34.0.0"
+        buildToolsVersion = "33.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 34
-        targetSdkVersion = 34
+        compileSdkVersion = 33
+        targetSdkVersion = 33
         ndkVersion = "25.1.8937393"
         kotlinVersion = "1.8.0"
         googlePlayServicesAuthVersion = "20.7.0" // <--- use this version or newer
@@ -16,7 +16,7 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
-        classpath('com.google.gms:google-services:4.4.1')
+        classpath 'com.google.gms:google-services:4.4.1'
     }
 }
 
